# ironhide-robots

./: LICENSE  README.md  ironhide-robots.rosinstall
ironhide_agilus_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ironhide_agilus_cell_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  kuka_kr6r900sixx.srdf  ompl_planning.yaml
ironhide_agilus_cell_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ironhide_agilus_cell_support/: CMakeLists.txt  package.xml
ironhide_agilus_cell_support/launch/: robot_interface.launch  start_robot_planning.launch
ironhide_agilus_cell_support/urdf/: ironhide_agilus_cell.xacro
ironhide_quantec_cell_moveit_config/: CMakeLists.txt  package.xml
ironhide_quantec_cell_support/: CMakeLists.txt  package.xml
ironhide_quantec_cell_support/launch/: robot_interface.launch  start_robot_planning.launch
ironhide_quantec_cell_support/urdf/: ironhide_quantec_cell.xacro
ironhide_robot_control/: CMakeLists.txt  package.xml
ironhide_robot_control/src/: ironhide_robot_control.cpp  ironhide_robot_control_test_client.cpp
ironhide_robot_control/srv/: setTrajectoryAgili.srv
