<?xml version="1.0"?>
<package format="2">
  <name>ironhide_agilus_cell_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      Support files for the KR6 R900 sixx manipulators
      available at the MTP laboratory.
    </p>
    <p>
      This package contains urdf / xacro resources, configuration
      files and launch files specifically written to work for the
      small robotic cell at MTP.
    </p>
  </description>
  <author>Adam Leon Kleppe</author>
  <maintainer email="adam.l.kleppe@ntnu.no">Adam Leon Kleppe</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent />
  </export>
</package>
